--- a/src/app/landing/offers/offers.component.html
+++ b/src/app/landing/offers/offers.component.html
@@ -10,7 +10,7 @@ transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop
                 <p class="p-2 text-center text-md font-bold lg:text-md text-red-600 text-transform: uppercase">
                  {{ offers.title }}
                 </p>
-                <p class="mt-1 text-sm  w-full text-center font-sans p-2">
+                <p class="mt-1 text-sm text-justify w-full text-center font-sans p-2">
                     {{ offers.description }}
                 </p> 
             </div>
