--- a/src/app/navbar/navigation-bar/navigation-bar.component.html
+++ b/src/app/navbar/navigation-bar/navigation-bar.component.html
@@ -26,7 +26,7 @@
         [ngClass]="{'opacity-100': menuStatus, 'opacity-0 hidden': !menuStatus}">
         <li class="mx-8 my-5 lg:my-0 hover:drop-shadow-2xl transition-all duration-300 
                 ease-in-out transform hover:scale-105 focus:scale-105">
-            <div class="text-lg hover:text-white duration-500"
+            <div class="text-lg hover:text-gray-950 duration-500"
                 [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('home')}">
                 <a [routerLink]="['/home']">
                     Home
@@ -35,7 +35,7 @@
         </li>
         <li class="mx-8 my-5 lg:my-0 hover:drop-shadow-2xl transition-all duration-300 
                 ease-in-out transform hover:scale-110 focus:scale-105">
-            <div class="text-lg hover:text-white duration-500"
+            <div class="text-lg hover:text-gray-950 duration-500"
                 [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('contact')}">
                 <a [routerLink]="['/contact']">
                     Contact
@@ -44,7 +44,7 @@
         </li>
         <li class="mx-8 my-5 lg:my-0 hover:drop-shadow-2xl transition-all duration-300
              transform hover:scale-110 focus:scale-105">
-            <div class="text-lg hover:text-white duration-500"
+            <div class="text-lg hover:text-gray-950 duration-500"
                 [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('about')}">
                 <a [routerLink]="['/about']">
                     About
@@ -53,7 +53,7 @@
         </li>
         <li class="mx-8 my-5 lg:my-0 hidden hover:drop-shadow-2xl transition-all duration-300
                  transform hover:scale-110 focus:scale-105">
-            <div class="text-lg hover:text-white duration-500"
+            <div class="text-lg hover:text-gray-950 duration-500"
                 [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('products')}">
                 <a [routerLink]="['/products']">
                     Products
@@ -62,7 +62,7 @@
         </li>
         <li class="mx-8 my-5 lg:my-0 hover:drop-shadow-2xl transition-all duration-300
                  transform hover:scale-110 focus:scale-105">
-            <div class="text-lg hover:text-white duration-500"
+            <div class="text-lg hover:text-gray-950 duration-500"
                 [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('centers') }">
                 <a [routerLink]="['/centers']">
                     Centers
@@ -71,7 +71,7 @@
         </li>
         <li class="hidden mx-8 my-5 lg:my-0 hover:drop-shadow-2xl transition-all duration-300
                  transform hover:scale-110 focus:scale-105">
-            <div class="text-lg hover:text-white duration-500"
+            <div class="text-lg hover:text-gray-950 duration-500"
                 [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('new-products') }">
                 <a [routerLink]="['/products']" [ngClass]="{'shadow:bg-gray-200': isActive('products')}">
                     Products
@@ -80,7 +80,7 @@
         </li>
         <li class="mx-8 my-5 lg:my-0 hover:drop-shadow-2xl transition-all duration-300 
                 transform hover:scale-110 focus:scale-105">
-            <div class="text-lg hover:text-white duration-500"
+            <div class="text-lg hover:text-gray-950 duration-500"
                 [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('categories') }">
                 <a [routerLink]="['/categories']">
                     Categories
@@ -89,7 +89,7 @@
         </li>
         <li class="mx-8 my-5 lg:my-0 hover:drop-shadow-2xl transition-all duration-300
                  transform hover:scale-110 focus:scale-105">
-            <div class="text-lg hover:text-white duration-500"
+            <div class="text-lg hover:text-gray-950 duration-500"
                 [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('trainers')}">
                 <a [routerLink]="['/trainers']">
                     Trainers
