--- a/src/app/partner/trainer-data/trainer-data.component.html
+++ b/src/app/partner/trainer-data/trainer-data.component.html
@@ -1,6 +1,6 @@
 <div class="bg-gray-100 font-sans rounded-lg">
     <div class="flex items-center justify-center">
-        <div class="bg-white p-6 mt-20 mb-10 lg-rounded">
+        <div class="bg-white mt-20 mb-10 lg-rounded">
             <form [formGroup]="updateTrainerForm">
                 <header class="justify-start p-2 text-gray-950 font-bold font-sans">
                     <h1 class=" text-xl text-red-600">Trainer's Profile</h1>
@@ -21,7 +21,7 @@
                     <div class="mx-auto p-2 col-span-4 md:col-span-2 w-full">
                         <span class="sr-only">Display Name</span>
                         <span class="ml-4 font-bold text-gray-600 italic">Display Name</span>
-                        <input formControlName="name" [value]="trainer.name" [(ngModel)]="trainer.name"
+                        <input formControlName="name"
                             class="w-full px-4 py-2 m-2 rounded-md bg-gray-100 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
                             [ngClass]="{'border-red-400': updateTrainerForm.get('name')?.invalid && updateTrainerForm.get('name')?.dirty }"
                             placeholder="Display name Team Berliz" type="text">
@@ -33,8 +33,7 @@
                     <div class="mx-auto p-2 col-span-4 md:col-span-2 w-full">
                         <span class="sr-only">Expereince</span>
                         <span class="ml-4 font-bold text-gray-600 italic">Expereince</span>
-                        <input formControlName="experience" [value]="trainer.experience"
-                            [(ngModel)]="trainer.experience"
+                        <input formControlName="experience"
                             class="w-full px-4 py-2 m-2 rounded-md bg-gray-100 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
                             [ngClass]="{'border-red-400': updateTrainerForm.get('experience')?.invalid && updateTrainerForm.get('experience')?.dirty }"
                             placeholder="experience" type="number">
@@ -46,7 +45,7 @@
                     <div class="mx-auto p-2 col-span-4" *ngIf="user?.role === 'admin'">
                         <span class="sr-only">Likes</span>
                         <span class="ml-4 font-bold text-gray-600 italic">Likes</span>
-                        <input formControlName="likes" [value]="trainer.likes" [(ngModel)]="trainer.likes"
+                        <input formControlName="likes"
                             class="w-full border-2 px-4 py-2 rounded-md m-2 hover:border-gray-400 focus:border-gray-400 focus:outline-none"
                             [ngClass]="{'border-red-400': updateTrainerForm.get('likes')?.invalid && updateTrainerForm.get('likes')?.dirty }"
                             placeholder="likes" type="number" readonly>
@@ -55,10 +54,10 @@
                             Expereince is required
                         </div>
                     </div>
-                    <div class="mx-auto p-2 col-span-2 md:col-span-2 w-full">
+                    <div class="mx-auto p-2 col-span-4 w-full">
                         <span class="sr-only">Motto</span>
                         <span class="ml-4 font-bold text-gray-600 italic">Motto</span>
-                        <textarea formControlName="motto" [value]="trainer.motto" [(ngModel)]="trainer.motto"
+                        <textarea formControlName="motto"
                             class="w-full px-4 py-2 m-2 rounded-md bg-gray-100 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
                             [ngClass]="{'border-red-400': updateTrainerForm.get('mtoo')?.invalid && updateTrainerForm.get('motto')?.dirty }"
                             placeholder="Write a short bio about discipline or motto" rows="5" cols="25"></textarea>
@@ -67,10 +66,10 @@
                             At least 30 characters
                         </div>
                     </div>
-                    <div class="mx-auto p-2 col-span-2 md:col-span-2 w-full">
+                    <div class="mx-auto p-2 col-span-4 w-full">
                         <span class="sr-only">Address</span>
                         <span class="ml-4 font-bold text-gray-600 italic">Address</span>
-                        <textarea formControlName="address" [value]="trainer.address" [(ngModel)]="trainer.address"
+                        <textarea formControlName="address"
                             class="w-full px-4 py-2 m-2 rounded-md bg-gray-100 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
                             [ngClass]="{'border-red-400': updateTrainerForm.get('address')?.invalid && updateTrainerForm.get('address')?.dirty }"
                             placeholder="Write your street address or location here" rows="5" cols="25"></textarea>
@@ -80,12 +79,12 @@
                         </div>
                     </div>
                     <div *ngFor="let cat of categories; let i = index"
-                        class="mx-auto flex items-center col-span-2 md:col-span-1">
+                        class="p-2 grid grid-cols-2 justify-start items-start  col-span-4 md:col-span-2">
                         <input formArrayName="categoryIds" (change)="onCheckboxChanged($event)"
                             [checked]="selectedCategoriesId.includes(cat.id)"
                             class="w-full px-4 py-2 m-2 rounded-md bg-gray-100 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
                             placeholder="tags" type="checkbox" [value]="cat.id">
-                        {{ cat.name }}
+                       <span> {{ cat.name }}</span>
                         <div *ngIf="updateTrainerForm.get('categoryIds')?.invalid && invalidForm"
                             class="text-red-500 mx-2">
                             Select at least one category
