--- a/src/app/trainer/trainer-details/trainer-details.component.html
+++ b/src/app/trainer/trainer-details/trainer-details.component.html
@@ -1,8 +1,10 @@
-<app-trainer-introduction [trainerIntroduction]="trainerIntroduction"></app-trainer-introduction>
-<app-trainer-pricing [trainerPricing]="trainerPricing"></app-trainer-pricing>
-<app-trainer-benefits></app-trainer-benefits>
-<app-trainer-feature-videos></app-trainer-feature-videos>
-<app-trainer-photo-album></app-trainer-photo-album>
-<app-trainer-video-album></app-trainer-video-album>
-<app-trainer-review></app-trainer-review>
-<app-trainer-like></app-trainer-like>
+<div *ngIf="componentLoaded">
+    <app-trainer-introduction [trainerIntroduction]="trainerIntroduction"></app-trainer-introduction>
+    <app-trainer-pricing [trainerPricing]="trainerPricing"></app-trainer-pricing>
+    <app-trainer-benefits [trainerBenefit]="trainerBenefit"></app-trainer-benefits>
+    <app-trainer-feature-videos [trainerFeatureVideo]="trainerFeatureVideo"></app-trainer-feature-videos>
+    <app-trainer-photo-album></app-trainer-photo-album>
+    <app-trainer-video-album></app-trainer-video-album>
+    <app-trainer-review></app-trainer-review>
+    <app-trainer-like></app-trainer-like>
+</div>
