--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="isTopbar()">
     <app-navigation-bar></app-navigation-bar>
     <router-outlet></router-outlet>
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 </div>
 <div *ngIf="isLogin()">
     <router-outlet></router-outlet>
@@ -19,8 +19,8 @@
         </div>
     </div>
 </div>
-<div *ngIf="isPageError()">
+<div *ngIf="!isSidebar() || !isSidebar() || !isLogin()">
     <app-navigation-bar></app-navigation-bar>
-    <router-outlet></router-outlet>
-    <app-footer></app-footer>
+    <!-- <router-outlet></router-outlet> -->
+    <!-- <app-footer></app-footer> -->
 </div>
