--- a/src/app/landing/landing-page/landing-page.component.html
+++ b/src/app/landing/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen flex items-center justify-center">
+<div class="h-screen w-full flex items-center justify-center">
     <app-hero-section></app-hero-section>
 </div>
 <app-offers-list [offersList]="offers"></app-offers-list>
