--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,4 @@
-<h2>404 - Page Not Found</h2>
+<div class="mt-20 p-8">
+    <h2>404 - Page Not Found</h2>
 <p>The requested page does not exist.</p>
+</div>
