--- a/src/app/trainer/trainer-feature-videos/trainer-feature-videos.component.html
+++ b/src/app/trainer/trainer-feature-videos/trainer-feature-videos.component.html
@@ -1,1 +1,81 @@
-<p>trainer-feature-videos works!</p>
+<div class="bg-gray-100 font-sans rounded-lg">
+    <div class="flex items-center justify-center">
+        <div class="bg-white p-6 mt-20 mb-10 lg-rounded">
+            <form [formGroup]="updateTrainerFeatureVideoForm">
+                <header class="justify-start p-2 text-gray-950 font-bold font-sans">
+                    <h1 class="text-xl text-red-600">Trainer's Motivation
+                        <span *ngIf="!trainerFeatureVideo.id" class="text-sm mx-2 text-gray-700 italic">
+                            (action required)</span>
+                    </h1>
+                    <span class="text-md flex text-gray-700">
+                        Date registered: {{ trainerFeatureVideo.date ? formatDate(trainerFeatureVideo.date) : 'N/A' }}
+                    </span>
+                </header>
+                <div class="border-b-2"></div>
+                <div class="invalid-form">
+                    <span *ngIf="updateTrainerFeatureVideoForm.invalid && invalidForm" class="mx-2 text-red-600">
+                        Input fields cannot be empty
+                    </span>
+                    <span *ngIf="updateTrainerFeatureVideoForm.valid && invalidForm" class="mx-2 text-gray-600">
+                        Eerything's up to date
+                    </span>
+                </div>
+                <div class="flex-cols items-center justify-center gap-2 w-full p-2 text-gray-950">
+                    <div class="mx-auto p-2 w-full">
+                        <span class="sr-only">motivation</span>
+                        <span class="ml-4 font-bold text-gray-600 italic">motivation</span>
+                        <textarea formControlName="motivation"
+                            class="w-full text-sm px-4 py-2 m-2 rounded-md bg-gray-200 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
+                            [ngClass]="{'border-red-400': updateTrainerFeatureVideoForm.get('motivation')?.invalid && updateTrainerFeatureVideoForm.get('motivation')?.dirty }"
+                            placeholder="Share your motivational message here. Inspire your clients by highlighting your journey, achievements, and what drives you to excel 
+                            in your fitness training. Use this space to connect with them on a personal level and encourage them to reach their goals."
+                            rows="20" cols="60">
+                        </textarea>
+                        <div *ngIf="updateTrainerFeatureVideoForm.get('motivation')?.invalid && updateTrainerFeatureVideoForm.get('motivation')?.dirty"
+                            class="text-red-500 mx-2">
+                            At least 500 characters
+                        </div>
+                    </div>
+                    <div class="mx-auto ">
+                        <span class="sr-only">Cover video</span>
+                        <span class="ml-4 font-bold text-gray-600 italic">Cover video</span>
+                        <div class="flex">
+                            <div class="shrink-0 group relative" *ngIf="trainerFeatureVideo.video">
+                                <img class="h-16 w-16 object-cover rounded-full cursor-pointer"
+                                    [src]="'data:video;base64,' + trainerFeatureVideo.video"
+                                    onerror="this.src='../../../assets/icons/user.png';" alt="Display video" />
+                                <div class="hidden group-hover:block fixed top-1/2 left-1/2 transform -translate-x-1/2
+                                    -translate-y-1/2 bg-black bg-opacity-50 p-4 rounded-lg ">
+                                    <img [src]="'data:video;base64,' + trainerFeatureVideo.video"
+                                        class="rounded-md p-1 object-cover "
+                                        onerror="this.src='../../../assets/icons/user.png';">
+                                </div>
+                            </div>
+                            <input
+                                class="border-b-2 px-4 py-2 rounded-md m-2 border-gray-400  hover:border-gray-400 focus:border-gray-400 focus:outline-none
+                                 block w-full text-sm text-gray-950 font-bold cursor-pointer file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0
+                                 file:text-sm file:font-semibold file:bg-gray-100 file:text-red-600 hover:file:bg-gray-200 file:cursor-pointer"
+                                [ngClass]="{'border-gray-950': updateTrainerFeatureVideoForm.get('video')?.invalid && updateTrainerFeatureVideoForm.get('video')?.dirty }"
+                                (change)="onVidSelected($event)" type="file" accept="/image">
+                        </div>
+                        <div *ngIf="trainerFeatureVideo.video" class="ml-4 font-bold text-gray-600 italic">
+                            <input type="checkbox" (change)="onCurrentVideoSelected($event)" [checked]="isChecked">
+                            select current video
+                        </div>
+                        <div *ngIf="updateTrainerFeatureVideoForm.get('video')?.invalid && updateTrainerFeatureVideoForm.get('video')?.dirty"
+                            class="text-red-500 mx-2">
+                            cover video is required
+                        </div>
+                    </div>
+                    <div class="">
+                        <button
+                            class="bg-red-600 rounded-md mx-auto m-2 col-span-2 py-1 px-2 font-bold font-sans mx-4 text-white text-sm lg:text-md flex items-center justify-center"
+                            type="submit" (click)="updateTrainerFeatureVideo()">
+                            save
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
